--- a/gb/19/9/7/n11504963.md
+++ b/gb/19/9/7/n11504963.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ceiokc3944/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ceiokc3944/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ceiokc3944/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ceiokc3944/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ceiokc3944/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ceiokc3944/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ceiokc3944/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ceiokc3944/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ceiokc3944/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ceiokc3944/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ceiokc3944/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ceiokc3944/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ceiokc3944/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ceiokc3944/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ceiokc3944/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ceiokc3944/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ceiokc3944/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ceiokc3944/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ceiokc3944/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ceiokc3944/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ceiokc3944/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ceiokc3944/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ceiokc3944/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ceiokc3944/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>周末活动推荐（2019年9月6日-9月8日）</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/e979128d0767b6a2ee4697c20daa799f-320x200.jpg" />
+
 <h6></h6>
 <hr>
 	<p>【大纪元2019年09月07日讯】</p>
-<h2><ahref="https://github.com/ceiokc3944/djy/blob/master/gb/tag/%E8%8A%9D%E5%8A%A0%E5%93%A5.md#1">芝加哥</a>河复兴节（Chicago River Revival Festival）</h2>
-<p><ahref="https://github.com/ceiokc3944/djy/blob/master/gb/tag/%E8%8A%9D%E5%8A%A0%E5%93%A5.md#1">芝加哥</a>河复兴节将于9月7日（周六）在芝加哥中国城的谭继平公园举行这个活动包括：芝加哥之友的第三届年度大跳，舞狮，现场音乐，公园之旅，划独木舟，钓鱼等有趣的水上活动，非常适合亲朋好友，家庭聚会。</p>
+<h2><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%8A%9D%E5%8A%A0%E5%93%A5.md#1">芝加哥</a>河复兴节（Chicago River Revival Festival）</h2>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%8A%9D%E5%8A%A0%E5%93%A5.md#1">芝加哥</a>河复兴节将于9月7日（周六）在芝加哥中国城的谭继平公园举行这个活动包括：芝加哥之友的第三届年度大跳，舞狮，现场音乐，公园之旅，划独木舟，钓鱼等有趣的水上活动，非常适合亲朋好友，家庭聚会。</p>
 <p>时间：9月7日（周六）上午9点-下午5点<br />
 地点：谭继平公园 1700 South Wentworth Ave., Chicago, IL 60616<br />
 费用：免费<br />
@@ -19,7 +19,7 @@
 地点：2245 West Superior St, Chicago (2200 block of W. Superior St. between Oakley Blvd. and Leavitt St. Chicago, IL)<br />
 费用：每日入场费为5美元，儿童区为5美元，After Party为10美元<br />
 网址：<ahref="http://www.facebook.com/pg/ukrainianvillagefest/events/?ref=page_internal" target="_blank" rel="noopener noreferrer">facebook.com/pg/ukrainianvillagefest/events</a></p>
-<figure id="attachment_11504975" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/09/69706500_754194258352097_2941853186723414016_o.jpg"><img class="size-large wp-image-11504975" src="https://i.epochtimes.com/assets/uploads/2019/09/69706500_754194258352097_2941853186723414016_o-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">乌克兰村节（Ukrainian Village Fest Facebook）</figcaption></figure>
+<figure id="attachment_11504975" aria-describedby="caption-attachment-11504975" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/09/69706500_754194258352097_2941853186723414016_o.jpg"><img class="size-large wp-image-11504975" src="https://i.epochtimes.com/assets/uploads/2019/09/69706500_754194258352097_2941853186723414016_o-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11504975" class="wp-caption-text">乌克兰村节（Ukrainian Village Fest Facebook）</figcaption></figure>
 <p>&nbsp;</p>
 <h2>德国十月节（German-American Oktoberfest）</h2>
 <p>林肯广场（Lincoln Square）是芝加哥的德裔聚居区，在这个一年一度的庆祝活动中，您可以畅饮德国啤酒，品尝德国风味的美食，欣赏音乐和舞蹈。周六下午2点在Lincoln大道举办年度Von Steuben游行。</p>
@@ -27,7 +27,7 @@
 地点：4700 N Lincoln Ave, Chicago Lincoln Square<br />
 费用：免费<br />
 网址：<ahref="http://www.germanday.com/oktoberfest" target="_blank" rel="noopener noreferrer">germanday.com/oktoberfest</a></p>
-<figure id="attachment_11504982" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/09/tent_sm-800x343.jpg"><img class="size-large wp-image-11504982" src="https://i.epochtimes.com/assets/uploads/2019/09/tent_sm-800x343-600x257.jpg" alt="" width="600" b="257" /></a><figcaption class="wp-caption-text">德国十月节（活动官网）</figcaption></figure>
+<figure id="attachment_11504982" aria-describedby="caption-attachment-11504982" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/09/tent_sm-800x343.jpg"><img class="size-large wp-image-11504982" src="https://i.epochtimes.com/assets/uploads/2019/09/tent_sm-800x343-600x257.jpg" alt="" width="600" b="257" /></a><figcaption id="caption-attachment-11504982" class="wp-caption-text">德国十月节（活动官网）</figcaption></figure>
 <p>&nbsp;</p>
 <h2>动物园路跑赛（Race at the zoo）</h2>
 <p>体验在布鲁克菲尔德动物园里举行的路跑比赛，一边跑一边经过狮子、老虎、斑马、老鹰等等，除了大人的5公里比赛，还有针对儿童的1英里路跑赛。收入将用于支持拯救濒危动物。</p>
@@ -35,7 +35,7 @@
 地点：8400 31st Street, Brookfield<br />
 费用：大人$45/4-13岁儿童$20<br />
 网址：<ahref="http://www.czs.org/zoorunrun" target="_blank" rel="noopener noreferrer">czs.org/zoorunrun</a></p>
-<figure id="attachment_11504983" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/09/ZooRunRun-for-the-Conservation-Fund.jpg"><img class="size-large wp-image-11504983" src="https://i.epochtimes.com/assets/uploads/2019/09/ZooRunRun-for-the-Conservation-Fund-600x249.jpg" alt="" width="600" b="249" /></a><figcaption class="wp-caption-text">动物园路跑赛（活动官网）</figcaption></figure>
+<figure id="attachment_11504983" aria-describedby="caption-attachment-11504983" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/09/ZooRunRun-for-the-Conservation-Fund.jpg"><img class="size-large wp-image-11504983" src="https://i.epochtimes.com/assets/uploads/2019/09/ZooRunRun-for-the-Conservation-Fund-600x249.jpg" alt="" width="600" b="249" /></a><figcaption id="caption-attachment-11504983" class="wp-caption-text">动物园路跑赛（活动官网）</figcaption></figure>
 <p>&nbsp;</p>
 <h2>独立战争重演（Revolutionary War）</h2>
 <p>体验军营生活，现场观看战争重演，有骑兵战术表演，战斧和刺刀比赛，风笛演奏，炮兵示范等，还有适合儿童的活动，以有趣的形式接触和认识美国历史。</p>
@@ -43,7 +43,7 @@
 地点：坎蒂尼公园（Cantigny Park）, 1S151 Winfield Road, Wheaton<br />
 费用：公园免费/停车收费article content begin -->0<br />
 网址：<ahref="https://cantigny.org/event/revolutionary-war-reenactment/" target="_blank" rel="noopener noreferrer">cantigny.org/event/revolutionary-war-reenactment</a></p>
-<figure id="attachment_11504990" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/09/Cantigny-2014.jpg"><img class="size-large wp-image-11504990" src="https://i.epochtimes.com/assets/uploads/2019/09/Cantigny-2014-600x398.jpg" alt="" width="600" b="398" /></a><figcaption class="wp-caption-text">独立战争重演（活动官网）</figcaption></figure>
+<figure id="attachment_11504990" aria-describedby="caption-attachment-11504990" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/09/Cantigny-2014.jpg"><img class="size-large wp-image-11504990" src="https://i.epochtimes.com/assets/uploads/2019/09/Cantigny-2014-600x398.jpg" alt="" width="600" b="398" /></a><figcaption id="caption-attachment-11504990" class="wp-caption-text">独立战争重演（活动官网）</figcaption></figure>
 <p>&nbsp;</p>
 <h2>北伊州飞行表演（Northern Illinois Airshow）</h2>
 <p>见证特技飞行员的飞行表演：老式战机A-10 和P-51表演，及海军飞机 T-45 Goshawk和A-4 Skyhawk的展示。除此之外今年还新加了BD5 微型机（Microjet）， 由于其独特的尺寸，BD-5J被称为世界上最小的喷气机。另外还可以体验一下坐直升机的感受——如果你肯花40 美元。 现场有食品和饮料出售，表演结束后孩子们还可以跟飞行员合照。</p>
@@ -51,7 +51,7 @@
 地点：2882 W Plane Rest Drive, Waukegan<br />
 费用：15美元（现金）/军人和12岁以下儿童免费, 免费停车<br />
 网址：<ahref="http://www.northernillinoisairshow.com" target="_blank" rel="noopener noreferrer">northernillinoisairshow.com</a></p>
-<figure id="attachment_11504991" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/09/nias_p-51-8.jpg"><img class="size-large wp-image-11504991" src="https://i.epochtimes.com/assets/uploads/2019/09/nias_p-51-8-600x383.jpg" alt="" width="600" b="383" /></a><figcaption class="wp-caption-text">北伊州飞行表演（活动官网）</figcaption></figure>
+<figure id="attachment_11504991" aria-describedby="caption-attachment-11504991" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/09/nias_p-51-8.jpg"><img class="size-large wp-image-11504991" src="https://i.epochtimes.com/assets/uploads/2019/09/nias_p-51-8-600x383.jpg" alt="" width="600" b="383" /></a><figcaption id="caption-attachment-11504991" class="wp-caption-text">北伊州飞行表演（活动官网）</figcaption></figure>
 <p>&nbsp;</p>
 <h2>Kohl儿童博物馆秋季家庭日（Kohl Childen&#8217;s Museum Fall Family Festival）</h2>
 <p>Kohl 儿童博物馆的年度秋季活动，认识动物、收获游戏和体育项目等，可以乘坐小火车、在宠物乐园跟动物亲密接触，乘坐马车，尝试老式苹果酒榨汁器，还可以与白雪公主见面。</p>
@@ -59,7 +59,7 @@
 地点：2100 Patriot Blvd.,Glenview<br />
 费用：免费<br />
 网址：<ahref="http://www.kohlchildrensmuseum.org/special-events/fall-family-festival" target="_blank" rel="noopener noreferrer">kohlchildrensmuseum.org/special-events/fall-family-festival</a></p>
-<figure id="attachment_11504995" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/09/SAM_0834-768x576.jpg"><img class="size-large wp-image-11504995" src="https://i.epochtimes.com/assets/uploads/2019/09/SAM_0834-768x576-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">Kohl儿童博物馆秋季家庭日（活动官网）</figcaption></figure>
+<figure id="attachment_11504995" aria-describedby="caption-attachment-11504995" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/09/SAM_0834-768x576.jpg"><img class="size-large wp-image-11504995" src="https://i.epochtimes.com/assets/uploads/2019/09/SAM_0834-768x576-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-11504995" class="wp-caption-text">Kohl儿童博物馆秋季家庭日（活动官网）</figcaption></figure>
 <p>&nbsp;</p>
 <h2>斯堪地纳维亚日（Scandinavian Day Festival）</h2>
 <p>这是一个庆祝五个北欧国家包括丹麦、芬兰、冰岛、挪威和瑞典的文化和历史的活动。 有传统食品、北欧啤酒品尝、手工艺品、音乐舞蹈、儿童活动、瑞典美国儿童合唱团表演等，各种动物，骑小马，脸部彩绘。</p>
@@ -67,48 +67,46 @@
 地点：Vasa Park, 35W217 Route 31, South Elgin, Illinois 60177<br />
 费用：12美元（现金）/12岁以下儿童免费, 免费停车<br />
 网址：<ahref="http://www.scandinaviandayil.com" target="_blank" rel="noopener noreferrer">scandinaviandayil.com</a></p>
-<figure id="attachment_11505003" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/09/48398463_2513921052030220_6657971226092240896_o.jpg"><img class="size-large wp-image-11505003" src="https://i.epochtimes.com/assets/uploads/2019/09/48398463_2513921052030220_6657971226092240896_o-600x418.jpg" alt="" width="600" b="418" /></a><figcaption class="wp-caption-text">斯堪地纳维亚日（活动Facebook）</figcaption></figure>
+<figure id="attachment_11505003" aria-describedby="caption-attachment-11505003" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/09/48398463_2513921052030220_6657971226092240896_o.jpg"><img class="size-large wp-image-11505003" src="https://i.epochtimes.com/assets/uploads/2019/09/48398463_2513921052030220_6657971226092240896_o-600x418.jpg" alt="" width="600" b="418" /></a><figcaption id="caption-attachment-11505003" class="wp-caption-text">斯堪地纳维亚日（活动Facebook）</figcaption></figure>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ceiokc3944/djy/blob/master/gb/20/11/4/n12525101.md#1">组图：美总统大选日 威州选民投票概况</a></li>
-<li><a href="https://github.com/ceiokc3944/djy/blob/master/gb/20/10/7/n12459389.md#1">组图：俄亥俄州举行提前投票 选民大排长龙</a></li>
-<li><a href="https://github.com/ceiokc3944/djy/blob/master/gb/20/9/28/n12437697.md#1">捍卫蒙古语 芝加哥蒙古人中领馆前集会</a></li>
-<li><a href="https://github.com/ceiokc3944/djy/blob/master/gb/20/9/27/n12434827.md#1">芝加哥法轮功学员中领馆前集会反迫害</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/4/15/n13712292.md#1">组图：肯塔基州遭龙卷风袭击 数万户断电</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/1/9/n13492754.md#1">神韵演出寓教于乐 启悟AT&amp;T经理深思</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/1/3/n13479311.md#1">海军指挥军士长：钦佩神韵演员的投入专注</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/1/3/n13478297.md#1">看完神韵 护理师近50年的背痛神奇消失</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10186094.md#1" target="_blank">林辉：天安门杀毛案疑点重重 侦案者冤狱七年</a></li><li><a href="https://github.com/ceiokc3944/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/3/n10612921.md#1" target="_blank">炮灰与英雄——中美韩战军人的命运</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/27/n7938314.md#1" target="_blank">摆脱10多年严重湿疹的折磨</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/10/3/n12449841.md#1">《圣经》与《推背图》预言的应验与变换9</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/9/n12606110.md#1">前以色列高官：外星人与人类联系 川普知道</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/9/n12605329.md#1">《诸世纪》预言揭美国大选舞弊内幕和密谋者</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/11/20/n12563507.md#1">【成吉思汗】花剌子模灭国 丘处机道破天机</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/11/28/n12581416.md#1">转世记忆58年历历在目 和尚说今生福报因果</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/9/n12606951.md#1">【直播】制止窃选 华府大型游行集会挺川</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/11/n12614166.md#1">【有冇搞错】三领域大目标 美灭共政策难逆转</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/12/n12615615.md#1">【薇羽看世间】川普的后盾</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/10/n12611557.md#1">钟原：习近平多日未公开露面 陷入进退两难</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/11/n12612906.md#1">【大选更新12·11】纳瓦罗：脸书的事实核查员是中共</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/11/n12612951.md#1">中共肺炎疫苗失败 澳洲政府紧急砍订单</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/11/n12613308.md#1">韩国导演金基德染疫身亡 终年59岁</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/11/n12614307.md#1">主演电影遭AI换脸 范冰冰变身吃播网红</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/11/n12614096.md#1">因骂毛事件遭央视封杀 61岁毕福剑自喻廉颇</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/10/n12611385.md#1">抵台隔离第二周遇地震 杜汶泽一句话激励港人</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/10/n12610375.md#1">户田惠梨香与松坂桃李宣布结婚：会相互扶持</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/10/n12608930.md#1">长白发可能是身体警讯 10种原因一定要当心</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/11/n12612411.md#1">美国湖泊出现巨无霸金鱼 重达4公斤</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/9/n12608346.md#1">鸡汤怎么煮最滋补？3道鸡汤药膳 补肾去湿气</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/12/n12615049.md#1">女子41年来为丈夫做午餐并吃一口 原因感人</a></li>
-<li><a href="https://github.com/lntccx3999/djy/blob/master/gb/20/12/10/n12611410.md#1">这个冬天不想感冒？神奇2穴位迅速击退感冒</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752381.md#1">【菁英论坛】应付内外困局 中共攻台视政治需求</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751943.md#1">【新闻看点】特斯拉裁员10% 全球大衰退将至？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ceiokc3944/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ceiokc3944/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/7/n11504963.htm">周末活动推荐（2019年9月6日-9月8日）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/7/n11504963.htm">周末活动推荐（2019年9月6日-9月8日）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ceiokc3944/djy/blob/master/gb/19/9/7/n11504963.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ceiokc3944/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ceiokc3944/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ceiokc3944/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ceiokc3944/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ceiokc3944/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/9/7/n11504963.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
